[tool.poetry]
name = "healthchecker"
version = "0.1.0"
description = "Example service vulnerable to RethinkDB SSRF"
authors = ["Vladimir Lebedev <d3fl4t3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
rethinkdb = "^2.4.5"
python-dotenv = "^0.12.0"
celery = "^4.4.1"


[tool.poetry.dev-dependencies]
black = "^19.10b0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
